--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -70,6 +70,9 @@ h4,
 h5,
 h6 {
   position: relative;
+  scroll-margin-top: $navbar-height;
+  padding-top: $navbar-height;
+  margin-top: -$navbar-height;
 }
 
 .anchor-link {
