--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -70,12 +70,10 @@ h4,
 h5,
 h6 {
   position: relative;
-  scroll-margin-top: $navbar-height;
-  padding-top: $navbar-height;
-  margin-top: -$navbar-height;
 }
 
 .anchor-link {
+  display: contents;
   position: absolute;
 
   /* Position to the left of the heading text. */
