--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -73,7 +73,7 @@ h6 {
 }
 
 .anchor-link {
-  position: relative;
+  position: absolute;
 
   /* Position to the left of the heading text. */
   /* This moves the link outside the heading's content box. */
