--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -7,7 +7,7 @@
     <div class="hero-body {% if page.hero_darken %} hero-darken {% endif %}">
         <div class="container">
             <h1 class="title is-2">{{ page.title }}</h1>
-            <p class="subtitle is-4">{{ page.subtitle }}</p>
+            <h2 class="subtitle is-4">{{ page.subtitle }}</h2>
             {% if page.hero_link %}
                 <div class="my-4">
                     <a href="{{ page.hero_link | relative_url }}" class="button is-info is-large">
