--- a/_includes/head-scripts.html
+++ b/_includes/head-scripts.html
@@ -376,24 +376,25 @@
 
 <!-- Start mtrcs code -->
 <script>
-  var _paq = window._paq = window._paq || [];
-  _paq.push(["setRequestMethod", "POST"]);
-  _paq.push(["disableAlwaysUseSendBeacon"]);
-  _paq.push(["enableHeartBeatTimer"]);
-  
-  /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
-  _paq.push(["setDocumentTitle", document.domain + "/" + document.title]);
-  _paq.push(["setCookieDomain", "*.set-outlooksignatures.com"]);
+	var _paq = window._paq || [];
   _paq.push(["disableCookies"]);
-  _paq.push(['trackPageView']);
-  _paq.push(['enableLinkTracking']);
-  (function() {
-    var u="//mtrcs.explicitconsulting.at/";
-    _paq.push(['setTrackerUrl', u+'poop.php']);
-    _paq.push(['setSiteId', '1']);
-    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-    g.async=true; g.src=u+'poop.js'; s.parentNode.insertBefore(g,s);
-  })();
+	_paq.push(["setRequestMethod", "POST"]);
+  _paq.push(["setDocumentTitle", document.domain + "/" + document.title]);
+	_paq.push(["disableAlwaysUseSendBeacon"]);
+	_paq.push(["enableHeartBeatTimer"]);
+	_paq.push(["trackPageView"]);
+	_paq.push(["enableLinkTracking"]);
+	
+	(function () {
+		var u = "https://mtrcs.explicitconsulting.at/";
+		_paq.push(["setTrackerUrl", u + "poop.php"]);
+		_paq.push(["setSiteId", "1"]);
+		var d = document, g = d.createElement("script"),s = d.getElementsByTagName("script")[0];
+		g.type = "text/javascript";g.async = true;g.defer = true;g.src = u + "poop.js";s.parentNode.insertBefore(g, s);
+	})();
 </script>
-<noscript><p><img referrerpolicy="no-referrer-when-downgrade" src="//mtrcs.explicitconsulting.at/poop.php?idsite=1&amp;rec=1" style="border:0;" alt="" /></p></noscript>
+
+<noscript>
+  <p><img referrerpolicy="no-referrer-when-downgrade" src="https://mtrcs.explicitconsulting.at/poop.php?idsite=1&amp;rec=1" style="border:0;" alt="" /></p>
+</noscript>
 <!-- End mtrcs code -->
