Add chatbot to all documents

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,12 @@
 >
     {% include head.html %}
     <body>
+        <script
+          src="https://app.livechatai.com/embed.js"
+          data-id="cme2jwryl000vjy0ce0e3khfx"
+          async defer>
+        </script>
+
         <div style="min-height: 100vh;">
             {% include skip-to-content.html %}
             {% if site.cookie_policy %}
