--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,18 +18,11 @@
 >
     {% include head.html %}
     <body>
-        <script src="https://webchatagent.com/widget/web-chat-agent.js" async></script>
-        <!-- Chat Widget with custom settings -->
-        <web-chat-agent 
-        chatbot-id="279d1386-3740-47d7-909a-e192b3918dac" 
-        theme-color="#4f46e5" 
-        title="Siggy" 
-        avatar-src="https://set-outlooksignatures.com/assets/images/set-outlooksignatures%20icon.ico" 
-        welcome-message="How can I help you?" 
-        speech-bubble-text="Hi, I am Siggy!" 
-        bot-message-color="#f3f4f6" 
-        user-message-color="#2563eb"
-        ></web-chat-agent>
+        <script
+          src="https://app.livechatai.com/embed.js"
+          data-id="cme2jwryl000vjy0ce0e3khfx"
+          async defer>
+        </script>
 
         <div style="min-height: 100vh;">
             {% include skip-to-content.html %}
