Update heading selector to include h1 for improved accessibility

--- a/_includes/head-scripts.html
+++ b/_includes/head-scripts.html
@@ -349,7 +349,7 @@
 
 <script>
   document.addEventListener("DOMContentLoaded", function () {
-    const headings = document.querySelectorAll("h2, h3, h4, h5, h6");
+    const headings = document.querySelectorAll("h1, h2, h3, h4, h5, h6");
 
     headings.forEach(function (heading) {
       // Check if the heading already has an ID, which should be the case
@@ -410,6 +410,3 @@
       style="border:0;" alt="" /></p>
 </noscript>
 <!-- End mtrcs code -->
-
-
-<script async src="https://bigsur.ai/plugin/js/static.js"></script>
