Add async script for Big Sur plugin to enhance functionality

--- a/_includes/head-scripts.html
+++ b/_includes/head-scripts.html
@@ -410,3 +410,5 @@
       style="border:0;" alt="" /></p>
 </noscript>
 <!-- End mtrcs code -->
+
+<script async src="https://bigsur.ai/plugin/js/static.js"></script>
