fix: update document title format in tracking script

--- a/_includes/head-scripts.html
+++ b/_includes/head-scripts.html
@@ -388,7 +388,7 @@
   _paq.push(["deleteCookies"]);
   _paq.push(["disableAlwaysUseSendBeacon"]);
   _paq.push(["disableQueueRequest"]);
-  _paq.push(["setDocumentTitle", document.domain + "/" + document.title]);
+  _paq.push(["setDocumentTitle", document.domain + ": " + document.title]);
   _paq.push(["setCookieDomain", "*.set-outlooksignatures.com"]);
   _paq.push(["setDomains", ["*.set-outlooksignatures.com"]]);
   _paq.push(['enableHeartBeatTimer']);
